syntax = "proto3";

package proto;

message File {
  string name = 1;
  string path = 2;
  uint32 size = 3;
  string thumbnail = 4;
  string id = 5;
  string ext = 6;
}

message FileUploadResponse {
  File file = 1;
}

message GetFilesResponse {
  repeated File files = 1;
}

message UpdateFileNameRequest {
  string id = 1;
  string name = 2;
}

message UpdateFileNameResponse {
  File file = 1;
}

message DeleteFileRequest {
  string id = 1;
}
